# sotsuken2024

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
bridge/: Cargo.toml
bridge/src/: lib.rs  msg.rs
depth_sender/: Cargo.toml
depth_sender/src/: main.rs
depth_visualizer/: Cargo.toml  icon.svg.import  project.godot  visualizer.gdextension
depth_visualizer/scenes/: main.tscn
depth_visualizer/scripts/: test.gd  texture_wrapper.gd
depth_visualizer/shaders/: rgbd_display.gdshader
depth_visualizer/src/: decoder.rs  lib.rs  visualizer.rs
gl/: Cargo.toml  build.rs
godot_vrrop_client/project/: client.gd  controller.gd  debug.keystore  export_presets.cfg  godot_vrrop_client.gdextension  icon.svg.import  point_cloud.gdshader  project.godot  settings.gd  theme.tres  ui.gd  ui.tscn  view_pyramid.gd  visualizer.gd  xr_main.gd  xr_main.tscn  xr_origin.gd
godot_vrrop_client/project/addons/SEAL/SettingTypes/: Setting.gd
godot_vrrop_client/project/addons/godot-xr-tools/objects/: viewport_2d_in_3d.tscn
godot_vrrop_client/rust/: Cargo.toml
godot_vrrop_client/rust/src/: binding.rs  lib.rs  point_cloud_visualizer.rs
godot_vrrop_server/project/: controller.gd  export_presets.cfg  godot_vrrop_server.gdextension  hand_material.tres  main.gd  main.tscn  openxr_action_map.tres  point_cloud.gdshader  project.godot  ui.gd  ui.tscn  view_pyramid.gd  visualizer.gd  xr_main.gd  xr_main.tscn  xr_origin.gd
godot_vrrop_server/project/point_cloud/: deduplicate.glsl  deduplicate.glsl.import  merge_point_cloud.glsl  merge_point_cloud.glsl.import
godot_vrrop_server/rust/: Cargo.toml
godot_vrrop_server/rust/src/: binding.rs  lib.rs  point_cloud_mesh.rs  point_cloud_visualizer.rs
plot/: plot_bandwidth.py  plot_latency.py  print_mean_stdiv.py
sender/: Cargo.toml
sender/src/: main.rs
visualizer/: Cargo.toml  icon.svg.import  openxr_action_map.tres  project.godot  visualizer.gdextension
visualizer/scenes/: main.tscn
visualizer/scripts/: rgbd_display.gd  test.gd
visualizer/src/: decoder.rs  gd_visualizer.rs  lib.rs  texture_copy.rs  visualizer.rs
vrrop_bench/: Cargo.toml
vrrop_bench/src/: main.rs
vrrop_client/: Cargo.toml  build.rs  meson.build
vrrop_client/cpp/: CMakeLists.txt  CameraRs2D4xx.cpp  CameraRs2D4xx.h  slam_core.cpp  slam_core.h
vrrop_client/src/: bin.rs  client.rs  lib.rs  main.rs  pointcloud.rs  slam_core.rs
vrrop_common/: Cargo.toml
vrrop_common/src/: bag.rs  lib.rs
vrrop_control_client/: Cargo.toml
vrrop_control_client/src/: bin.rs  lib.rs
vrrop_control_client_desktop/: Cargo.toml
vrrop_control_client_desktop/src/: bin.rs
vrrop_control_common/: Cargo.toml
vrrop_control_common/src/: lib.rs
vrrop_control_server/: Cargo.toml
vrrop_control_server/src/: bin.rs  lib.rs
vrrop_server/: Cargo.toml  build.rs
vrrop_server/cpp/: CameraRs2D4xx.cpp  CameraRs2D4xx.h  slam_core.cpp  slam_core.h
vrrop_server/src/: bin.rs  lib.rs  main.rs  pointcloud.rs  server.rs  slam_core.rs
