[workspace]
resolver = "2"
members = [
  "bridge",
  "vrrop_client", "vrrop_common", "vrrop_server",
]

[workspace.dependencies]
vrrop_common = { path = "vrrop_common" }

anyhow = "1"
bincode = "1.3.3"
cobs = "0.2.3"
crc = "3.0"
futures = "0.3.30"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
image = "0.25.1"
nalgebra = "0.32.6"
packed_struct = "0.10"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tokio-tungstenite = "0.23.1"
