[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
realsense-rust.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-video.workspace = true
tokio.workspace = true
