[package]
name = "vrrop_client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrrop_common.workspace = true
anyhow.workspace = true
bincode.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
image.workspace = true
nalgebra.workspace = true

[build-dependencies]
cmake = "0.1"
bindgen = "0.65.1"
