[package]
name = "godot_vrrop_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vrrop_common.workspace = true
vrrop_client.workspace = true
vrrop_control_client.workspace = true

anyhow.workspace = true
fxhash.workspace = true
godot.workspace = true
image.workspace = true
nalgebra.workspace = true
tokio.workspace = true
